<?xml version="1.0" encoding="UTF-8"?>
<!--
    Description: Latke parent POM.
    Version: 1.2.2.26, Jul 13, 2019
    Author: Liang Ding
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.b3log</groupId>
    <artifactId>latke-parent</artifactId>
    <version>2.5.7-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Latke Parent</name>
    <url>https://github.com/b3log/latke</url>
    <description>一款以 JSON 为主的 Java Web 框架。</description>
    <inceptionYear>2009</inceptionYear>

    <modules>
        <module>latke-core</module>
        <module>latke-repository-h2</module>
        <module>latke-repository-mysql</module>
        <module>latke-repository-sqlserver</module>
        <module>latke-repository-oracle</module>
    </modules>

    <organization>
        <name>B3log</name>
        <url>https://b3log.org</url>
    </organization>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
        </license>
    </licenses>

    <properties>
        <servlet.version>3.1.0</servlet.version>
        <el-api.version>1.0</el-api.version>
        <freemarker.version>2.3.28</freemarker.version>
        <commons-io.version>2.6</commons-io.version>
        <commons-lang.version>2.6</commons-lang.version>
        <commons-codec.version>1.11</commons-codec.version>
        <javassist.version>3.23.1-GA</javassist.version>
        <slf4j.version>1.7.25</slf4j.version>

        <mysql-connector-java.version>8.0.12</mysql-connector-java.version>
        <h2.version>1.4.197</h2.version>
        <hikaricp.version>3.2.0</hikaricp.version>
        <jedis.version>2.9.3</jedis.version>
        <caffeine.version>2.7.0</caffeine.version>

        <maven-license-plugin.version>1.9.0</maven-license-plugin.version>
        <maven-surefire-plugin.version>2.22.1</maven-surefire-plugin.version>
        <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
        <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
        <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
        <testng.version>6.1.1</testng.version>
        <maven.compiler.target>1.8</maven.compiler.target>
        <maven.compiler.source>1.8</maven.compiler.source>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <JDK.version>1.8</JDK.version>
    </properties>

    <scm>
        <connection>scm:git:git@github.com:b3log/latke.git</connection>
        <developerConnection>scm:git:git@github.com:b3log/latke.git</developerConnection>
        <url>git@github.com:b3log/latke.git</url>
        <tag>HEAD</tag>
    </scm>

    <developers>
        <developer>
            <id>d@b3log.org</id>
            <name>Liang Ding</name>
            <email>d@b3log.org</email>
            <url>http://88250.b3log.org</url>
            <roles>
                <role>Lead</role>
                <role>Initial Committer</role>
            </roles>
            <organization>B3log</organization>
            <organizationUrl>https://b3log.org</organizationUrl>
            <timezone>+8</timezone>
        </developer>

        <developer>
            <id>mainlove</id>
            <name>mainlove</name>
            <url>https://hacpai.com/member/mainlove</url>
            <roles>
                <role>Committer</role>
            </roles>
            <organization>B3log</organization>
            <organizationUrl>https://b3log.org</organizationUrl>
            <timezone>+8</timezone>
        </developer>
    </developers>

    <issueManagement>
        <system>Github Issues</system>
        <url>https://github.com/b3log/latke/issues</url>
    </issueManagement>

    <distributionManagement>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

    <build>
        <plugins>

            <plugin>
                <groupId>com.mycila.maven-license-plugin</groupId>
                <artifactId>maven-license-plugin</artifactId>
                <version>${maven-license-plugin.version}</version>
                <configuration>
                    <basedir>${basedir}</basedir>
                    <header>src/main/resources/etc/header.txt</header>
                    <quiet>false</quiet>
                    <failIfMissing>true</failIfMissing>
                    <aggregate>true</aggregate>
                    <strictCheck>true</strictCheck>
                    <includes>
                        <include>**/src/main/java/**/*.java</include>
                        <include>**/src/test/java/**/*.java</include>
                        <include>**/src/main/resources/*.properties</include>
                        <include>**/src/test/resources/*.properties</include>
                    </includes>
                    <excludes>
                        <exclude>**/src/main/java/**/package-info.java</exclude>
                        <exclude>**/src/main/java/org/json/*.java</exclude>
                        <exclude>**/src/main/java/org/weborganic/furi/*.java</exclude>
                        <exclude>**/src/main/java/org/b3log/latke/util/AntPathMatcher.java</exclude>
                        <exclude>**/src/main/java/javax/**/*.java</exclude>
                    </excludes>

                    <useDefaultExcludes>true</useDefaultExcludes>
                    <mapping>
                        <java>SLASHSTAR_STYLE</java>
                    </mapping>
                    <useDefaultMapping>true</useDefaultMapping>
                    <properties>
                        <year>2009-present</year>
                        <devTeam>b3log.org</devTeam>
                    </properties>
                    <encoding>UTF-8</encoding>
                </configuration>
                <executions>
                    <execution>
                        <phase>compile</phase>
                        <goals>
                            <goal>format</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <skipTests>false</skipTests>
                    <parallel>methods</parallel>
                    <threadCount>20</threadCount>
                    <useSystemClassLoader>false</useSystemClassLoader>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven-source-plugin.version}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

    <profiles>
        <profile>
            <id>ci</id>
        </profile>

        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.sonatype.plugins</groupId>
                        <artifactId>nexus-staging-maven-plugin</artifactId>
                        <version>${nexus-staging-maven-plugin.version}</version>
                        <extensions>true</extensions>
                        <configuration>
                            <serverId>ossrh</serverId>
                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
                        </configuration>
                    </plugin>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>${maven-gpg-plugin.version}</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>dev</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <repositories>
                <repository>
                    <id>aliyun</id>
                    <url>http://maven.aliyun.com/nexus/content/groups/public</url>
                </repository>
            </repositories>

            <pluginRepositories>
                <pluginRepository>
                    <id>aliyun</id>
                    <url>http://maven.aliyun.com/nexus/content/groups/public</url>
                </pluginRepository>
            </pluginRepositories>
        </profile>
    </profiles>

</project>
